--- a/config/settings.yml
+++ b/config/settings.yml
@@ -41,19 +41,29 @@ use_video_placeholder: false
 # To find your access key and secret key, head over to here --> http://bit.ly/R4I4ky (Follow that guide in the Seller Central page)
 amazon_access_key: "YOUR_AMAZON_ACCESS_KEY"
 amazon_secret_key: "YOUR_AMAZON_SECRET_KEY"
-price: 	19.95
+price: 	10
+
+# Stripe settings.  These can be overridden using STRIPE_API_KEY and STRIPE_PUBLIC_KEY environment variables
+# https://dashboard.stripe.com/account/apikeys
+stripe_api_key: "##"
+stripe_public_key: "##"
+
 
 # if use_payment_options is set to true, then a set of radio buttons will be displayed with various payment options.
 # There is a PaymentOption model for storing info about payment options.  To set up your payment options you should
 # put code in seeds.rb, then run rake db:seed
 use_payment_options: false
 
-payment_description: "Help to organize Hitchwiki hackathon in Turkey."
+# payment_processor determines the payment processor to use.
+# "amazon" => Amazon Payments
+# "stripe" => Stripe
+# Amazon is the default; anything that doesn't match another option will be treated as "amazon"
+payment_processor: "stripe"
 
 # Amazon limits how much we can charge people with their Multi-Use tokens.
 # You probably should add some leeway to account for international shipping
 # this value will be added to the price to create a charge limit
-charge_limit: 25.00
+charge_limit: 10
 
 # Stats settings
 
